Mavericks with boost

--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -7,17 +7,21 @@
 # Originally by Laszlo Hanyecz (solar@heliacal.net)
 
 CXX=llvm-g++
-DEPSDIR=/opt/local
+DEPSDIR=/usr/local
 
 INCLUDEPATHS= \
  -I"$(CURDIR)" \
  -I"$(CURDIR)"/obj \
  -I"$(DEPSDIR)/include" \
- -I"$(DEPSDIR)/include/db48"
+ -I"$(DEPSDIR)/include/db48" \
+ -I"$(DEPSDIR)/iCellar/openssl/1.0.1f/include" \
+ -I"$(DEPSDIR)/Cellar/boost/1.55.0/include"
 
 LIBPATHS= \
  -L"$(DEPSDIR)/lib" \
- -L"$(DEPSDIR)/lib/db48"
+ -L"$(DEPSDIR)/lib/db48" \
+ -L"$(DEPSDIR)/Cellar/openssl/1.0.1f/lib" \
+ -L"$(DEPSDIR)/Cellar/boost/1.55.0/lib"
 
 USE_UPNP:=1
 USE_IPV6:=1
@@ -60,7 +64,7 @@ ifdef RELEASE
 # Compile for maximum compatibility and smallest size.
 # This requires that dependencies are compiled
 # the same way.
-CFLAGS = -mmacosx-version-min=10.5 -arch x86_64 -O3 -msse2
+#CFLAGS = -stdlib=libstdc++ -mmacosx-version-min=10.5 -arch x86_64 -O3 -msse2
 else
 CFLAGS = -g -msse2
 endif
